[workspace]
resolver = "3"
members = [
    "crate",
    "bindings/python",
    "bindings/wasm",
]
default-members = [
    "crate",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/roniemartinez/IPToCC"
authors = ["Ronie Martinez <ronmarti18@gmail.com>"]
rust-version = "1.85"

[profile.release]
lto = "fat"
codegen-units = 1
