[tool.poetry]
name = "iptocc"
version = "2.1.2"
description = "Get country code of IPv4/IPv6 address. Address lookup is done offline."
authors = ["Ronie Martinez <ronmarti18@gmail.com>"]
license = "MIT"
include = [
    "iptocc/delegated-afrinic-extended-latest",
    "iptocc/delegated-arin-extended-latest",
    "iptocc/delegated-apnic-extended-latest",
    "iptocc/delegated-lacnic-extended-latest",
    "iptocc/delegated-ripencc-extended-latest",
    "iptocc/iso3166.csv",
]
repository = "https://github.com/roniemartinez/IPToCC"
readme = "README.md"
keywords = [
    "IP to Country Code",
    "IP to Country",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.poetry.scripts]
update_rir = "updater:update_rir_databases"

[tool.poetry.dependencies]
python = ">=3.6.1,<4"
pandas = "^1.0.1"

[tool.poetry.dev-dependencies]
codecov = "^2.0.16"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
flake8 = "^3.7.9"
isort = "^4.3.21"
safety = "^1.8.7"
bandit = "^1.6.2"

[tool.isort]
line_length = 99
multi_line_output = 3
include_trailing_comma = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
