[project]
name = "iptocc-scripts"
version = "0.0.0"
description = "Repo maintenance scripts for IPToCC"
requires-python = "~=3.14.0"
dependencies = [
    "rich==14.3.3",
    "semver==3.0.4",
    "tomlkit==0.14.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["B", "C4", "E", "F", "I", "N", "RUF", "SIM", "UP", "W"]
